# riskie

./: .editorconfig  AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
.opencode/: opencode.jsonc
contrib/: riskie.service
contrib/arch/: PKGBUILD  PKGBUILD-bin  riskie.install
contrib/systemd/: riskie.service
docs/plans/: 2026-03-23-riskie-initial-implementation.md  2026-03-25-luks-encrypted-device-support.md
po/: en.po  es.po  riskie.pot
src/: encrypted.rs  i18n.rs  main.rs  notify.rs  password.rs  tray.rs  udisks2.rs
