[package]
name = "riskie"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# D-Bus (udisks2)
zbus = { version = "5", features = ["tokio"] }

# System tray (ksni - StatusNotifierItem)
# Using git until 0.3.4 is released with zbus 5 compatibility fixes
ksni = { git = "https://github.com/iovxw/ksni", branch = "master" }

# Desktop notifications
notify-rust = "4"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
futures = "0.3"
async-stream = "0.3"

[[bin]]
name = "riskie"
path = "src/main.rs"
