[package]
name = "riskie"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ernesto Cruz Olivera <ecruzolivera@gmail.com>"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# D-Bus (udisks2)
zbus = { version = "4", features = ["tokio"] }

# System tray (ksni - StatusNotifierItem)
ksni = "0.3"

# Desktop notifications
notify-rust = "4"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Localization
gettext-rs = { version = "0.7", features = ["gettext-system"] }

# Utilities
futures = "0.3"
async-stream = "0.3"

[[bin]]
name = "riskie"
path = "src/main.rs"